...
import com.example.nasasearch.ROUTE_DETAILS_SCREEN
import com.example.nasasearch.model.Collection
import com.example.nasasearch.model.Item
import com.example.nasasearch.ui.NASAUiState
import com.example.nasasearch.ui.NASAViewModel

const val HOME_SCREEN_TEST_TAG = "homescreentag"
const val SEARCH_BAR_TEST_TAG = "searchbartag"

const val PHOTO_CARD_CONTENT_DESCRIPTION = "A NASA photo card"
private const val SEARCH_ICON = "Search icon"
private const val SEARCH_TEXT = "Search"
private const val CLOSE_ICON = "Close icon"
@Composable
...
